src/css/custom.css
/* ... */
@media screen and (width <= 996px) {
  .navbar .navbar__item {
    display: none;
  }

  .navbar-sidebar {
    --ifm-menu-link-padding-horizontal: 16px;
  }

  .navbar .navbar__item--show-on-mobile {
    display: flex;
  }

  .navbar .navbar__items {
    display: none;
  }

  .navbar .navbar__items--show-on-mobile {
    display: flex;
  }

  .footer__items {
    gap: 16px;
  }

  .footer__col {
    margin-bottom: 0;
  }

  .sidebar__main-category {
    display: block;
    font-size: 28px;
    margin-block-end: 48px;
    padding-inline-start: 20px;
  }
}

@media screen and (width <= 550px) {
  .footer__items {
    grid-auto-flow: row;
  }
}

a {
  transition: none;
}

body:not(.navigation-with-keyboard) *:not(input):focus {
  outline-color: var(--utrecht-focus-outline-color, revert);
  outline-offset: var(--utrecht-focus-outline-offset, revert);
  outline-style: var(--utrecht-focus-outline-style, revert);
  outline-width: var(--utrecht-focus-outline-width, revert);
}

.container--wide {
  padding-inline: 24px;
}

@media screen and (width >= 1150px) {
  .navbar__items--left {
    gap: 20px;
  }
}

@media (width >= 997px) {
  .nlds-theme {
    --docusaurus-announcement-bar-height: 80px;
  }
}

.dsw-usps ul {
  padding: 0;
}
.dsw-usps li {
  color: var(--nlds-document-subtle-color);
  display: inline;
  font-size: 1.25em;
  list-style: none;
  padding: 0;
}
.dsw-usps li:not(:last-child)::after {
  content: "∙";
  display: inline-block;
  margin-left: 0.25em;
  padding-right: 0.25em;
}
.dsw-signup {
  background-color: var(--utrecht-button-primary-action-background-color);
  border-radius: 0.25em;
  color: var(--utrecht-button-primary-action-color);
  display: inline-block;
  margin-top: 1em;
  padding: 0.5em 1em;
  text-decoration: none;
}
.dsw-signup:hover {
  color: var(--utrecht-button-primary-action-color);
  text-decoration: inherit;
}
.dsw-signup-main {
  font-weight: 700;
}
.dsw-signup-sup {
  display: block;
  font-size: 0.65em;
}

/* HACK: these fixes need to be made in utrecht too */
.utrecht-button:focus {
  background-color: var(--_utrecht-button-background-color) !important;
  border-color: var(--_utrecht-button-border-color) !important;
  color: var(--_utrecht-button-color) !important;
  scale: var(--utrecht-button-scale, 1) !important;
}

.utrecht-button:focus-visible {
  background-color: var(--_utrecht-button-focus-background-color) !important;
  border-color: var(--_utrecht-button-focus-border-color) !important;
  color: var(--_utrecht-button-focus-color) !important;
  scale: var(--utrecht-button-focus-scale, 1) !important;
}

.utrecht-link:focus {
  background-color: inherit !important;
  color: inherit !important;
  text-decoration: inherit !important;
  text-decoration-thickness: inherit !important;
}

.utrecht-link:focus-visible {
  background-color: var(--utrecht-link-focus-background-color, transparent) !important;
  color: var(--utrecht-link-focus-color, var(--utrecht-link-color)) !important;
  text-decoration: var(--utrecht-link-focus-text-decoration, var(--utrecht-link-text-decoration, underline)) !important;
  text-decoration-skip: none !important;
  text-decoration-skip-ink: none !important;
  text-decoration-thickness: max(
    var(--utrecht-link-focus-text-decoration-thickness, var(--utrecht-link-text-decoration-thickness)),
    1px
  ) !important;
}

/* End HACK */

img {
  height: auto;
}

.visually-hidden {
  border: 0;
  clip: rect(0 0 0 0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

abbr[title] {
  pointer-events: none;
  text-decoration: none;
}

.utrecht-breadcrumb-nav {
  margin-inline-start: calc(-1 * var(--utrecht-breadcrumb-nav-item-padding-inline-start, 0));
}

#__blog-post-container > p:first-child {
  font-size: var(--utrecht-paragraph-lead-font-size);
}

/* WCAG EM rapport */
.wcag-em dt {
  font-weight: 700;
}
.wcag-em td,
.wcag-em th {
  text-align: left;
  vertical-align: top;
}

.wcag-em td h6,
.wcag-em th h6 {
  margin-top: auto;
}

/* CSS Richtlijnen */
.nlds-dont {
  border: 2px solid #c00;
  margin: 20px;
  padding: 20px;
}

.nlds-icon-ext {
  background-image: url("../icons/external-link.svg");
  background-position: right;
  background-repeat: no-repeat;
  padding-right: 20px;
}
.docs-doc-page .utrecht-html label,
.docs-doc-page .utrecht-html legend {
  font-weight: 700;
}

.docs-doc-page input[type="text"],
.docs-doc-page input[type="email"],
.docs-doc-page input[type="tel"],
.docs-doc-page input[type="password"] {
  display: block;
}
.docs-doc-page ul {
  margin-bottom: 20px;
}
.docs-doc-page div.button {
  border: 1px solid #223c61;
  border-radius: 8px;
  font-weight: 700;
  padding-inline-end: 12px;
}

.docs-doc-page div.button:hover,
.docs-doc-page button:hover {
  cursor: pointer;
}

.docs-doc-page .utrecht-html input[type="text"]::placeholder,
.docs-doc-page .nlds-canvas__example_src-components-Canvas-Canvas-module input[type="text"]::placeholder {
  opacity: 1;
  color: #757575;
  opacity: 100%;
}

.docs-doc-page .utrecht-html button {
  margin: 16px 0;
}

.docs-doc-page .utrecht-html input[type="text" i]:invalid {
  border-color: #7a8aa0;
  border-width: 1px;
}
.sr-only {
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
  word-wrap: normal;
}
/* ... */

